--- a/index.html
+++ b/index.html
@@ -7,100 +7,100 @@
 </head>
 <body>
     <header>
-        <a href="">
-          <p>WebStudio</p>
+        <a href="#" class="header">
+          <p class="header">WebStudio</p>
         </a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Порфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li class="header-item"><a href="" class="header-link">Студія</a></li>
+          <li class="header-item"><a href="" class="header-link">Порфоліо</a></li>
+          <li class="header-item"><a href="" class="header-link">Контакти</a></li>
         </ul>
         <div>
-          <a href="">info@devstudso.com"</a>
+          <a href="" class="div-text">info@devstudso.com"</a>
           <a href="">+380961111111</a>
         </div>
       </header>
         <main>
-          <ul>
-            <li>
-            <button type="button">Усі</button>
-            <li>
-              <button type="button">Веб-сайти</button>
+          <ul class="main-list">
+            <li class="main-item">
+            <button type="button" class="main-button">Усі</button>
+            <li class="main-item">
+              <button type="button" class="main-button">Веб-сайти</button>
             </li>
-            <li>
-              <button type="button">Додатки</button>
+            <li class="main-item">
+              <button type="button" class="main-button">Додатки</button>
             </li>
-            <li>
-              <button type="button">Дизайн</button>
+            <li class="main-item">
+              <button type="button" class="main">Дизайн</button>
             </li>
-            <li>
-              <button type="button">Маркетинг</button>
+            <li class="main-item"> 
+              <button type="button" class="main-button">Маркетинг</button>
             </li>
 
           </ul>
         </main>
-          <main>
+          <main class="main-portfolio">
             <ul>
-              <li>
-                <img src="img.png" alt="">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+              <li class="portfolio-item">
+                <img src="img.png" alt="" class="portfolio-photo">
+                <h3 class="portfolio-name">Технокряк</h3>
+                <p class="portfolio-text">Веб-сайт</p>
               </li>
-            <li>
-            <img src="img (1).png" alt="">
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <li class="portfolio-item">
+            <img src="img (1).png" alt="" class="portfolio-photo">
+            <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
+            <p class="portfolio-text">Дизайн</p>
             </li>
-            <li>
-              <img src="img (2).png" alt="" />
-              <h3>Ресторан Seafood</h3>
-              <p>Додаток</p>
+            <li class="portfolio-item">
+              <img src="img (2).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Ресторан Seafood</h3>
+              <p class="portfolio-text">Додаток</p>
             </li>
-            <li>
-              <img src="img (3).png" alt="">
-              <h3>Проєкт Prime</h3>
-              <p>Маркетинг</p>
+            <li class="portfolio-item">
+              <img src="img (3).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Проєкт Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
             </li>
-            <li>
-              <img src="img (4).png" alt="" />
-              <h3>Проєкт Boxes</h3>
-              <p>Додаток</p>
+            <li class="portfolio-item">
+              <img src="img (4).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Проєкт Boxes</h3>
+              <p class="portfolio-text">Додаток</p>
             </li>
-            <li>
-              <img src="img (5).png" alt="" />
-              <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
+            <li class="portfolio-item">
+              <img src="img (5).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
             </li>
-            <li>
-              <img src="img (6).png" alt="" />
-              <h3>Видання Limited Edition</h3>
-              <p>Дизайн</p>
+            <li class="portfolio-item">
+              <img src="img (6).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Видання Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
             </li>
-            <li>
-              <img src="img (7).png" alt="">
-              <h3>Проєкт LAB</h3>
-              <p>Маркетинг</p>
+            <li class="portfolio-item">
+              <img src="img (7).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Проєкт LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
             </li>
-            <li>
-              <img src="img (8).png" alt="">
-              <h3>Growing Business</h3>
-              <p>Додаток</p>
+            <li class="portfolio-item">
+              <img src="img (8).png" alt="" class="portfolio-photo">
+              <h3 class="portfolio-name">Growing Business</h3>
+              <p class="portfolio-text">Додаток</p>
             </li>
           </ul>
           </main>
       <footer>
         <ul>
-          <li>
-            <h3>WebStudio</h3>
+          <li class="footer-item">
+            <h3 class="footer-name">WebStudio</h3>
           </li>
-          <li>
-            <p>м.Київ,пр-т Лесі Українки 26</p>
+          <li class="footer-item">
+            <p class="footer-name">м.Київ,пр-т Лесі Українки 26</p>
           </li>
-          <li>
-            <p>info@devstudso.com</p>
+          <li class="footer-item">
+            <p class="footer-text">info@devstudso.com</p>
           </li>
-          <li>
-            <p>+380961111111</p>
+          <li class="footer-item">
+            <p class="footer-contact">+380961111111</p>
           </li>
         </ul>
       </footer>
