--- a/index.html
+++ b/index.html
@@ -1,111 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./CSS/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./CSS/style.css">
-</head>
-<body>
-    <header>
-        <a href="#" class="header">
-          <p class="header">WebStudio</p>
-        </a>
-        <ul>
-          <li class="header-item"><a href="" class="header-link">Студія</a></li>
-          <li class="header-item"><a href="" class="header-link">Порфоліо</a></li>
-          <li class="header-item"><a href="" class="header-link">Контакти</a></li>
-        </ul>
-        <div>
-          <a href="" class="div-text">info@devstudso.com"</a>
-          <a href="">+380961111111</a>
-        </div>
-      </header>
-        <main>
-          <ul class="main-list">
-            <li class="main-item">
-            <button type="button" class="main-button">Усі</button>
-            <li class="main-item">
-              <button type="button" class="main-button">Веб-сайти</button>
-            </li>
-            <li class="main-item">
-              <button type="button" class="main-button">Додатки</button>
-            </li>
-            <li class="main-item">
-              <button type="button" class="main">Дизайн</button>
-            </li>
-            <li class="main-item"> 
-              <button type="button" class="main-button">Маркетинг</button>
-            </li>
 
-          </ul>
-        </main>
-          <main class="main-portfolio">
-            <ul>
-              <li class="portfolio-item">
-                <img src="img.png" alt="" class="portfolio-photo">
-                <h3 class="portfolio-name">Технокряк</h3>
-                <p class="portfolio-text">Веб-сайт</p>
-              </li>
-            <li class="portfolio-item">
-            <img src="img (1).png" alt="" class="portfolio-photo">
-            <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-text">Дизайн</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (2).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Ресторан Seafood</h3>
-              <p class="portfolio-text">Додаток</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (3).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Проєкт Prime</h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (4).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Проєкт Boxes</h3>
-              <p class="portfolio-text">Додаток</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (5).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Inspiration has no Borders</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (6).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Видання Limited Edition</h3>
-              <p class="portfolio-text">Дизайн</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (7).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Проєкт LAB</h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="img (8).png" alt="" class="portfolio-photo">
-              <h3 class="portfolio-name">Growing Business</h3>
-              <p class="portfolio-text">Додаток</p>
-            </li>
-          </ul>
-          </main>
-      <footer>
-        <ul>
-          <li class="footer-item">
-            <h3 class="footer-name">WebStudio</h3>
-          </li>
-          <li class="footer-item">
-            <p class="footer-name">м.Київ,пр-т Лесі Українки 26</p>
-          </li>
-          <li class="footer-item">
-            <p class="footer-text">info@devstudso.com</p>
-          </li>
-          <li class="footer-item">
-            <p class="footer-contact">+380961111111</p>
-          </li>
-        </ul>
-      </footer>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./CSS/reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./CSS/style.css">
+</head>
+
+<body>
+  <header>
+    <nav class="header-information">
+
+      <a class="header-logo" href=""><span style="color:#2196F3;">Web</span>
+        Studio</a>
+      <ul class="header-list">
+        <li class="header-item"><a href="#home" class="header-link"><button class="header-button">Студія</button></a>
+        </li>
+        <li class="header-item" class="header-link"><a href="#portfolio" class="header-link"><button
+              class="header-button">Портфоліо</button></a></li>
+        <li class="header-item"><a href="#contact" class="header-link"> <button
+              class="header-button">Контакти</button></a></li>
+
+      </ul>
+      <div>
+        <a href="#" class="div-text">info@devstudso.com"</a>
+        <a href="#" class="div-contact">+380961111111</a>
+      </div>
+    </nav>
+  </header>
+  <main class="main-02-button">
+    <button data-number="first" class="main-button">Усі</button>
+    <button data-number="second" class="main-button">Веб-сайти</button>
+    <button data-number="third" class="main-button">Додатки</button>
+    <button data-number="four" class="main-button">Дизайн</button>
+    <button data-number="fifth" class="main-button">Маркетинг</button>
+  </main>
+  <main class="main-portfolio">
+    <ul class="portfolio-list">
+      <li class="portfolio-item">
+        <img src="img.png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Технокряк</h3>
+        <p class="portfolio-text">Веб-сайт</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (1).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
+        <p class="portfolio-text">Дизайн</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (2).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Ресторан Seafood</h3>
+        <p class="portfolio-text">Додаток</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (3).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Проєкт Prime</h3>
+        <p class="portfolio-text">Маркетинг</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (4).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Проєкт Boxes</h3>
+        <p class="portfolio-text">Додаток</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (5).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Inspiration has no Borders</h3>
+        <p class="portfolio-text">Веб-сайт</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (6).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Видання Limited Edition</h3>
+        <p class="portfolio-text">Дизайн</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (7).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Проєкт LAB</h3>
+        <p class="portfolio-text">Маркетинг</p>
+      </li>
+      <li class="portfolio-item">
+        <img src="img (8).png" alt="" class="portfolio-photo">
+        <h3 class="portfolio-name">Growing Business</h3>
+        <p class="portfolio-text">Додаток</p>
+      </li>
+    </ul>
+  </main>
+  <footer>
+    <ul class="contact">
+      <li class="footer-item">
+        <h2 class="contact-logo"><a class="contact-Web" href=""><span style="color:#2196F3;">Web</span>
+            Studio</a></h2>
+      </li>
+      <li class="footer-item">
+        <p class="footer-name">м.Київ,пр-т Лесі Українки 26</p>
+      </li>
+      <li class="footer-item">
+        <p class="footer-text">info@devstudso.com</p>
+      </li>
+      <li class="footer-item">
+        <p class="footer-contact">+380961111111</p>
+      </li>
+    </ul>
+  </footer>
 </body>
+
 </html>
